tests/e2e-openshift/route/01-report-empty-otlphttp-spans.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      #!/bin/bash
      set -ex
      # Export empty payload and check of collector accepted it with 2xx status code
      otlp_http_host=$(kubectl get route otlp-http-simplest-route -n $NAMESPACE -o jsonpath='{.spec.host}')
      for i in {1..40}; do curl --fail -ivX POST http://${otlp_http_host}:80/v1/traces -H "Content-Type: application/json" -d '{}' && break || sleep 1; done
